# sjsksksksksksk

rm2022/: dum5_5.xml  picodet5_12b.xml  picodet5_12process.onnx  qqq.xml
rm2022/RM_Standard2022-master/: CMakeLists.txt  bb2345processed.onnx  main.cpp
rm2022/RM_Standard2022-master/include/rmcv/: objdetect.h
rm2022/RM_Standard2022-master/include/rmcv/core/: serialport.h
rm2022/RM_Standard2022-master/include/rmcv/core/daheng/: daheng.h
rm2022/RM_Standard2022-master/src/: debug.cpp  objdetect.cpp  serialport.cpp
